--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
     "pages:build": "npx @cloudflare/next-on-pages",
-    "preview": "npm run pages:build && wrangler pages dev",
-    "deploy": "npm run pages:build && wrangler pages deploy"
+    "build": "next build && npm run pages:build",
+    "preview": "npm run build && wrangler pages dev",
+    "deploy": "npm run build && wrangler deploy --env production",
+    "deploy:preview": "npm run build && wrangler deploy --env preview",
+    "deploy:dev": "npm run build && wrangler deploy --env=\"\""
   },
   "dependencies": {
     "next": "15.4.6",
