--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deploy:dev": "npm run cf:build && wrangler deploy --env=\"\""
   },
   "dependencies": {
+    "@next/third-parties": "^15.4.6",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
