--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,9 @@
 name = "charades-generator"
 compatibility_date = "2024-01-01"
 
+# Pages configuration
+pages_build_output_dir = ".vercel/output/static"
+
 # KV Namespace bindings for feedback storage
 [[kv_namespaces]]
 binding = "FEEDBACK_KV"
