--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "cf:build": "npm run build && npx @cloudflare/next-on-pages",
+    "cf:dev": "npm run cf:build && wrangler dev",
+    "cf:preview": "npm run cf:build && wrangler deploy --env preview",
+    "cf:deploy": "npm run cf:build && wrangler deploy --env production",
     "pages:build": "npx @cloudflare/next-on-pages",
-    "cf:build": "npm run build && npm run pages:build",
     "preview": "npm run cf:build && wrangler pages dev .vercel/output/static --config wrangler.dev.toml",
     "deploy": "npm run cf:build && wrangler pages deploy .vercel/output/static",
     "deploy:preview": "npm run cf:build && wrangler pages deploy .vercel/output/static --env preview",
@@ -21,7 +24,7 @@
     "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.13",
+    "@cloudflare/next-on-pages": "^1.13.16",
     "@cloudflare/workers-types": "^4.20250807.0",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
