--- a/wrangler.dev.toml
+++ b/wrangler.dev.toml
@@ -5,5 +5,5 @@ compatibility_date = "2024-01-01"
 # KV Namespace bindings for local development
 [[kv_namespaces]]
 binding = "FEEDBACK_KV"
-id = "feedback-dev"
-preview_id = "feedback-dev-preview"
+id = "051dfaa61eea42d78d464e62dae7cb09"
+preview_id = "64c1f557dc834e5dbb152b4a434d2bb1"
