--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,18 +1,27 @@
-# Cloudflare Pages with Functions configuration
+# Cloudflare Workers configuration for Next.js SSR
 name = "charades-generator"
-compatibility_date = "2025-08-12"
+compatibility_date = "2024-10-01"
+compatibility_flags = ["nodejs_compat"]
 
-# Pages configuration
-pages_build_output_dir = "out"
+# Build configuration - Cloudflare will run this
+[build]
+command = "npm run build"
+cwd = "./"
+
+# Environment variables
+[vars]
+NODE_ENV = "production"
+
+# KV Namespaces
+[[kv_namespaces]]
+binding = "FEEDBACK_KV"
+id = "051dfaa61eea42d78d464e62dae7cb09"
+preview_id = "64c1f557dc834e5dbb152b4a434d2bb1"
 
 # Preview environment
 [env.preview]
-kv_namespaces = [
-  { binding = "FEEDBACK_KV", id = "64c1f557dc834e5dbb152b4a434d2bb1" }
-]
+vars = { NODE_ENV = "preview" }
 
 # Production environment
 [env.production]
-kv_namespaces = [
-  { binding = "FEEDBACK_KV", id = "051dfaa61eea42d78d464e62dae7cb09" }
-]
+vars = { NODE_ENV = "production" }
