--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 # Cloudflare Workers configuration for Next.js SSR
-name = "charades-generator"
+name = "charades-generator-workers"
 compatibility_date = "2024-10-01"
 compatibility_flags = ["nodejs_compat"]
 
