增加第三方实时推送

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@next/third-parties": "15.5.9",
     "next": "15.5.9",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
